--- a/my-blog/src/App.css
+++ b/my-blog/src/App.css
@@ -15,6 +15,8 @@ body{
     margin: 0%;
     font-family: 'Courier New', Courier, monospace;
 }
+
+/* Styled navbar */
 nav{
     margin: 0;
     width: 100%;
@@ -38,3 +40,4 @@ a:hover{
      border-radius: 2px;
      color: #f0f0f0;
 }
+
