--- a/my-blog/src/Pages/CreatePost/CreatePost.css
+++ b/my-blog/src/Pages/CreatePost/CreatePost.css
@@ -1,7 +1,7 @@
 .createPostPage{
     padding: 20vh 20vw;
     margin: 0 auto;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(228, 228, 228);
 }
 .Box{
     display: flex;
@@ -9,7 +9,11 @@
     justify-content:center ;
     align-items: center;
     margin: 0 auto;
-    width: 20vw;
-    padding: 20px auto;
-    border: 1px solid #c5d5c5;
+    width: 25vw;
+    height: 50vh;
+    padding: 20px;
+    border: 3px solid #c5d5c5;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 4px 9px 24px 7px rgba(197,213,197,0.72);
 }
