--- a/my-blog/src/Pages/CreatePost/CreatePost.css
+++ b/my-blog/src/Pages/CreatePost/CreatePost.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .createPostPage{
     padding: 20vh 20vw;
     margin: 0 auto;
@@ -11,9 +14,14 @@
     margin: 0 auto;
     width: 25vw;
     height: 50vh;
-    padding: 20px;
+    padding: 20%;
     border: 3px solid #c5d5c5;
     border-radius: 5px;
-    background-color: white;
+    background-color: rgb(228, 228, 228);
     box-shadow: 4px 9px 24px 7px rgba(197,213,197,0.72);
+    min-width:300px;
+}
+.text-area{
+    background-color: white;
+    
 }
