--- a/my-blog/src/Pages/Home/Home.css
+++ b/my-blog/src/Pages/Home/Home.css
@@ -2,7 +2,7 @@
     background-color: rgb(228, 228, 228);
     min-height: 100vh;
     margin: 0;
-    padding: 0;
+    padding: 20px;
 }
 .post{
     display: flex;
@@ -26,6 +26,7 @@
     width: 60%;
     opacity: 0.3;
 }
-.post-sender{
+.post-footer{
+    display: flex;
     opacity: 0.4;
 }
