--- a/my-blog/src/App.css
+++ b/my-blog/src/App.css
@@ -53,6 +53,12 @@ a:hover{
 }
 .current-user{
     margin: 0 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.profil-img{
+    margin-right: 5px;
 }
 
 
