--- a/my-blog/src/Pages/CreatePost/CreatePost.css
+++ b/my-blog/src/Pages/CreatePost/CreatePost.css
@@ -5,6 +5,7 @@
     padding: 20vh 20vw;
     margin: 0 auto;
     background-color: rgb(228, 228, 228);
+    height: 100vh;
 }
 .Box{
     display: flex;
