feat: Add randomColor variable by useContext

--- a/my-blog/src/Pages/Home/Home.css
+++ b/my-blog/src/Pages/Home/Home.css
@@ -21,6 +21,13 @@
     margin-bottom: 20px;
 
 }
+
+.quote-icon{
+    position: relative;
+    left: -45%;
+    margin-top: 10px;
+    
+}
 .text-container{
     align-self: flex-start;
     margin:0 5vw;
